fix(mobile-viewport-height): reduce viewport on mobile devices from 100vh to 85vh fix(main >. loaderspin): adjust position of loaderspin on map to ensure it is in the middle

--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ main#main{
 img#map{
     border: 1px solid var(--shadow-grey);
     width: 100vw;
-    height: 90vh;
+    height: 85vh;
 }
 #error{
     font-size: 1.3em;
@@ -337,8 +337,8 @@ div.loaderspin{
     width: 80px;
     height: 80px;
     position: absolute;
-    top: 38%;
-    left: 50%;
+    top: 35%;
+    left: 42%;
 }
 @keyframes spin{
     0% {transform: rotate(0deg);}
